Updates prior to release.
* Change formatting.
* Correct lots of typos.

--- a/ccb-2017F.md
+++ b/ccb-2017F.md
@@ -5,11 +5,11 @@ Cuts, closes, and balances for Fall 2017
 and balances are now over, and add/drop period has started.  Do you wonder 
 how things went?  Let's see ...
 
-_American Studies_
+__American Studies__
 
 Katya cut _Cultural Politics of Fashion_ down to 15.
 
-_Studio Art_
+__Studio Art__
 
 They cancelled the over-enrolled section of ART 111, _Introduction
 to the Studio_[1].  There are seven slots remaining in remaining
@@ -20,7 +20,7 @@ Art does not seem to have been able to offer another section of
 _Drawing_.  That's too bad.  Seventeen students who wanted to do art
 can't [2].
 
-_Biology_
+__Biology__
 
 Biology seems to have mostly handled the over-enrollments in BIO 251, 
 _Molecules, Cells, & Organisms w/lab_, although each section is now
@@ -31,7 +31,7 @@ At the 300 level, Biology seems to have tried an interesting approach.
 They've taken the twelve-person seminar/lab classes and turned two of
 them into eighteen-person seminars with separate labs of nine students.
 
-_Chemistry_
+__Chemistry__
 
 They've added a fifth section of _Organic Chemistry I_ and two additional
 sections of the corresponding lab.  Even with that expansion, every
@@ -42,12 +42,12 @@ They've left _Instrumental_ over-enrolled by four and _Physical Chemistry I_
 over-enrolled by sixth [4].  But they do seem to have added another
 section of lab to help balance things out.
 
-_Classics_
+__Classics__
 
 MC seems to have cut a bit, but still has twenty-six students in her
 _History of Ancient Greece_.
 
-_Computer Science_
+__Computer Science__
 
 We balanced the two sections of _Algorithms and Object-Oriented Design_.  We
 have three open slots between the two sections.
@@ -64,33 +64,33 @@ by eleven students, and CSC 341 over-enrolled by three students [5].
 We left CSC 395 over-enrolled by one student.  I think Titus promised
 a slot to another student, too.
 
-_Economics_
+__Economics__
 
 Economics continues to look like it's in reasonable shape.  One of the
 seminars even has some room.  But that doesn't make sense, since I know
 that they had more folks sign up for seminars than they could hold.  
 Perhaps some students forgot to enroll.
 
-_English_
+__English__
 
 They cut _The Craft of Fiction_ back down to fifteen.  Twenty-two students
 will not get a chance to do creative writing.  I wonder if they've offered
 those students another option.
 
-_History_
+__History__
 
 It looks like the History department has mostly managed to balance
 things out.  HIS 266, _History of Modern Middle East_ is over-enrolled
 by two students and [Sarah](sarah-purcell)'s seminar remains
 over-enrolled by three.
 
-_Humanities_
+__Humanities__
 
 The faculty teaching our Humanities special topics are clearly generous.
 _The Politics of Human Thriving_ is over-enrolled by fourteen [6] and
 _Mental Health Policy/Outreach_ is over-enrolled by four.
 
-_Mathematics and Statistics_
+__Mathematics and Statistics__
 
 MAT 209, _Applied Statistics_, seems to have closed.  That's strange.
 There was some room when last I checked.  But they are over-enrolled
@@ -100,25 +100,26 @@ MAT 215, _Linear Algebra_, has seven open slots after balancing.  Let's
 hope that's enough for the incoming class!
 
 As I expected, they bumped some students from _Graph Theory_ to
+_Number Theory_.
 
 They balanced the two sections of MAT 310, _Statistical Modeling_.
 I think that means they had to cut eleven students.  It looks like they
 also cut nine students from _Prob Stats I_.  Our Statistics concentration
 is popular, and the College needs to find ways to support it better.
 
-_Music_
+__Music__
 
 They've left _Music, Mind, & Brain_ over-enrolled.  They've cut the nine
 extra who were in Mark's _Topics in American Music: Hip Hop_ [6]
 
-_Physics_
+__Physics__
 
 As expected, they've balanced the two sections of _Modern Physics Lab_.
 
 They've left _Electromagnetic Theory_ over-enrolled by six and _Ad Lab_
 by one.
 
-_Political Science_
+__Political Science__
 
 They've cut twenty-two students from ConLaw to bring it down to its cap 
 of 25.  They've cut eleven from _Politics of International Relations_
@@ -126,28 +127,30 @@ to bring it down to 26, one over its cap.  Wayne has left _US Foreign
 Policymaking Process_ over-enrolled by eight students.  I wonder where
 the students cut from the other courses went.
 
-_Psychology_
+__Psychology__
 
 _Health Psychology_ and _Cross-Cultural_ remain over-enrolled.
 
-_Religious Studies_
+__Religious Studies__
 
 _The Crusades_ is back down to its cap of 20.  It looks like 19 were cut.
 
-_Sociology_
+__Sociology__
 
 It looks like they balanced intro.
 
 It looks like the had to cut twenty-two from _Deviance and Social Control_
 [8].
 
-_Social Studies_
+I wonder where those twenty-two students went.
+
+__Social Studies__
 
 _Politics of Human Thriving_ and _Ethical Leadership_ remain over-enrolled.
 
 ---
 
-Did I learn anything from doing that?  I learned that the College needs
+Did I learn anything from that exercise?  I learned that the College needs
 to find more avenues for student creativity.  We cut large numbers from
 Studio Art and _The Craft of Fiction_, and it doesn't look there's
 much else available.  I saw, more clearly than ever, that there are
@@ -157,16 +160,16 @@ are departments that say "We have caps for a reason".  There are also
 a few faculty who say "If students want to take my class, I'll let them."
 You can guess which camp I fall into.
 
-But I also understand the "We have caps for a reason" group.  The experience
+I also understand the "We have caps for a reason" group.  The experience
 is less good for students in a class that is over-enrolled.  The workload
 is higher on the faculty member.  And, in the end, it sometimes seems like
-if you keep making accommodations, there's no incentive for others to give
+if you keep making accommodations, there's no incentive for others [9] to give
 you the resources you need.
 
 You may be wondering where all the students who were cut for classes go.
 I wonder the same.  But we've just started the add/drop period for those
 students, so I'm going to wait until the end of that period before doing
-a more careful analysis [9].  We will see.
+a more careful analysis [10].  We will see.
 
 ---
 
@@ -194,7 +197,9 @@ changes were made.
 
 [8] How's that for social control?
 
-[9] I also need to wait until I have more time.
+[9] Or, as faculty normally phrase it "The administration".
+
+[10] I also need to wait until I have more time.
 
 ---
 
