Remove AP reading information.

--- a/csp-2017-06-09.md
+++ b/csp-2017-06-09.md
@@ -109,7 +109,7 @@ your own  You can see both sample solutions and the rubric at
 
 [6] I say "the rubric".  There are actually two rubrics for CSP, one
 for the "explore" task and one for the "create" task.  Readers and
-table leaders work on one or the other.  I'm part of the "explore" group.
+table leaders work on one or the other.  
 
 [7] More or less.
 
@@ -147,4 +147,4 @@ a new museum..
 
 ---
 
-*Version 1.0 of 2017-06-09.*
+*Version 1.1 of 2017-06-14.  (Version 1.0 released on 2017-06-09.)*
