CSP take 4, cleaned up.

--- a/csp-2017-06-27.md
+++ b/csp-2017-06-27.md
@@ -62,20 +62,22 @@ with the examples posted online and with the way we scored the rubric
 [11].  Does that mean that Grinnell will no longer credit AP CSP?  No.
 
 > Every high-school teacher I spoke with is teaching an AP CSP course
-that is clearly worthy of college credit.  Hence, I am reserving
-judgement until the College Board updates the examples online [12]
-and perhaps even until I see what happens at next year's reading [14].
+that appears worthy of college credit.  Hence, I am reserving judgement
+until the College Board updates the examples online and perhaps
+even until I see what happens at next year's reading [12].
 
 Am I done writing about my experience reading CSP?
 Almost certainly not.  I look forward to explaining why
 I dislike [some of the examples that were posted online at AP
 Central](http://apcentral.collegeboard.com/apc/public/exam/exam_information/231726.html)
-[15].  I may comment on the [example that disappeared from the
-site](https://web.archive.org/web/20161120105214/http://apcentral.collegeboard.com:80/apc/public/exam/computer_science_principles/232660.html) [16].
-I'm tempted to write templates for the two performance tasks [17],
-partially to help myself think through them more, partially to help
-any AP CSP students at GHS (or elsewhere).  Expect more fun over the
-coming weeks.
+[14].  I may comment on the [example that disappeared from the
+site](https://web.archive.org/web/20161120105214/http://apcentral.collegeboard.com:80/apc/public/exam/computer_science_principles/232660.html)
+[15].  I'm tempted to write templates for the two performance tasks
+[16], partially to help myself think through them more, partially to
+help any AP CSP students at GHS (or elsewhere).  None of those should
+conflict with my contract with ETS, since they deal with public materials
+and do not rely on anything specific I learned while at the reading.
+Expect more fun over the coming weeks.
 
 ---
 
@@ -110,22 +112,18 @@ very consistently.
 [11] Am I allowed to say that in public?  I think so.  I didn't give any
 details of the interpretation of the rubric or why I'm uncomfortable with it.
 
-[12] Wow, that was an awful sentence, wasn't it?  I read too much bad
-high-school writing and that experience clearly corrupted my own ability
-to write.  I should recover in the next week or so.
-
-[14] That assumes, of course, that they'll let me come back and that it
+[12] That assumes, of course, that they'll let me come back and that it
 will be in a format that makes it worth coming back.  
 
-[15] Those seem hard to find. I expect they are replacing them.  But I
+[14] Those seem hard to find. I expect they are replacing them.  But I
 still think it's worth commenting on what used to be there, since it
 served as a guidelines for many students and teachers.
 
-[16] It's been listed as unavailable for as long as I've been getting
+[15] It's been listed as unavailable for as long as I've been getting
 ready to read and reading.  But I was interested to see why it was taken
 down and checked the wayback machine for what had been posted.
 
-[17] I heard enough teachers talking about writing templates for their
+[16] I heard enough teachers talking about writing templates for their
 students that I feel comfortable writing and posting my own.
 
 ---
