--- a/cs-oer-2017-07-11.md
+++ b/cs-oer-2017-07-11.md
@@ -109,7 +109,7 @@ worth revisiting broadly.
 * I should revisit ACM student membership and what Safari access it provides.
   The books on Safari are not open, but affordability is an issue to consider.
 
-That's enough on testbooks.  Let's move on to other CS resources.
+That's enough on textbooks.  Let's move on to other CS resources.
 What about [ensemble / Computing Portal](http://computingportal.org/).
 I see for now that Search is unavailable.  I'll look later.
 
@@ -196,4 +196,6 @@ I know about the UW stuff.  Our guest speaker mentioned others.
 
 ---
 
-*Version 1.0 of 2017-07-11.*
+*Original version published 2017-07-11.*
+
+*Version 1.0.1 of 2017-07-12.*
