Minor text update

--- a/new-csc151-2017-08-07.md
+++ b/new-csc151-2017-08-07.md
@@ -1,5 +1,5 @@
-The new CSC 151, revisited
-==========================
+A new CSC 151, revisited
+========================
 
 _I've been working on [the new CSC 151](new-csc151-2017-06-05) for much
 of the summer.  Today I gave a report to our Data Science workshop [1]
