Final version of unreleased musing on name tags.

--- a/name-tags-2017-08-09.md
+++ b/name-tags-2017-08-09.md
@@ -1,11 +1,21 @@
 Name tags
 =========
 
+_This musing will not be posted because, upon reflection, it
+inappropriately targets a few individuals.  I need to work more on
+putting myself in the place of the other._
+
 Grinnell [1] recently made the decision to switch the format of our
 name tags.  We used to use classy, but not particularly readable, black
 and red on brass name tags.  We are switching to less classy, but much
 more readable, black and red on white name tags.  I applaud that decision;
 I'd rather name tags that people can read.
+
+I will also admit that I seem to be more concerned about name tags than
+many people.  I have colleagues who still use their mating slug tags [2].
+When I mentioned the new tags to someone, they said "I don't think I've
+ever used my GC name tag."  But I do my best to use one of mine when I'm at
+official College events.
 
 Along with the change in name tags, we've also
 changed the ordering process.  Instead of ordering
@@ -14,7 +24,7 @@ storefront](https://marcomcentral.app.pti.com/Total_Choice_Shipping_and_Printing
 It looks like we were planning the change to the storefront in any case,
 but I suspect that I'm partially responsible, given that I convinced the
 local shop to issue me a name tag that lists me as "Samuel A. Rebelsky,
-Curmudgeon" [2].
+Curmudgeon" [3].
 
 All sounds well and good, doesn't it?  We have better looking name tags.
 We have a relatively convenient online ordering system.  I happen to think
@@ -30,7 +40,7 @@ treat themselves as more central than the academic program and (b) show
 too little understanding of the academic program.
 
 With that said, let's look at what you can choose as your affiliation
-on the new name tags [3,4].
+on the new name tags [4,5].
 
 > 
 Academic Advising Office;
@@ -103,7 +113,7 @@ Policy Studies;
 Political Science;
 Office of the President;
 Psychology;
-Center for Religion, Spirituality, and Social Justice [5];
+Center for Religion, Spirituality, and Social Justice [6];
 Religious Studies;
 Office of the Registrar;
 Russian;
@@ -125,14 +135,14 @@ Office of the Treasurer; and
 Wellness.
 
 What do you notice about this list?  I notice a few things.  First, we
-are incredibly inconsistent about how we name things [7].  Sometimes, we add
+are incredibly inconsistent about how we name things [8].  Sometimes, we add
 the word "Office"; Sometimes, we do not.  When we add it, it can come
 at the front or back.  I'm not sure why we don't put "Department" before
-or after academic departments [8,9].  I'm really not sure why we have
-two entries for the bookstore [10].  I don't understand why some programs
+or after academic departments [9,10].  I'm really not sure why we have
+two entries for the bookstore [11].  I don't understand why some programs
 and centers are missing, such as Prairie Studies, the Rosenfield Program,
 the Wilson Center, the Center for Humanities, our Title IX office, the new
-Institute for Global Engagement [11], and so on and so forth.  Why do we
+Institute for Global Engagement [12], and so on and so forth.  Why do we
 write "Grinnell College" twice on some name tags---at the top and in the
 title of the entity, as in "Grinnell College Golf Course".  But the most
 important question the list raises to me is:
@@ -142,16 +152,16 @@ departments?**
 
 What do I mean by that?  There are at least four departments that were
 misnamed in the original list: Chinese and Japanese was listed as only
-"Chinese" [12]; French and Arabic was listed as only "French" [14];
+"Chinese" [14]; French and Arabic was listed as only "French" [15];
 Mathematics and Statistics had separate listings for "Mathematics"
-and "Statistics" [15,16]; and Theatre and Dance was listed as only
-"Theatre" [17,18].  I'm not sure why they've separated Art into Studio Art
+and "Statistics" [16,17]; and Theatre and Dance was listed as only
+"Theatre" [18,19].  I'm not sure why they've separated Art into Studio Art
 and Art History, since it's one department with two majors, but I also
 don't know whether the Art faculty care.
 
 Two weeks ago, I wrote to the contact person for name tags about these
 issues and a variety of others. I have yet to hear a response, not even a
-"we're looking into the issues you've raised" [19].  I didn't see any
+"we're looking into the issues you've raised" [20].  I didn't see any
 changes to the site as of two days ago, but as of today they've fixed
 the foreign language departments as of this morning.  They have not,
 however, fixed the other two departments.  Is it really that hard to
@@ -162,56 +172,73 @@ tag back.
 
 ---
 
+I shared an early draft of this musing with some colleagues.  They noted
+that the College likely has no control over the ordering Web site,
+which (a) may account for the delay in getting things updated, or even
+in getting an answer and (b) may even account for the initial incorrect
+list of department names.  I think the first issue is reasonable (although
+does not excuse Communication's failure to get back to me); if the latter
+is the case, Communications should have proofread.
+
+---
+
 [1] Well, probably the Office of Communications, rather than the College
 itself.
 
-[2] No, Communications will not allow me to get a new name tag in that form.
+[2] There was a period in which the College used only the right
+half of the Laurel Leaf as our logo.  Students quickly decided
+that the two things looked like mating slugs.  [The Wayback machine
+copy of old College Web
+site](https://web.archive.org/web/19981202000825/http://www.grinnell.edu:80/)
+shows some examples.
+
+[3] No, Communications will not allow me to get a new name tag in that form.
 They are no fun whatsoever.
 
-[3] This list is from a few days ago; interestingly, they addressed some
+[4] This list is from a few days ago; interestingly, they addressed some
 of my concerns in this musing, but not all of them.
 
-[4] Typos are likely mine.  I could not find a way to automatically 
+[5] Typos are likely mine.  I could not find a way to automatically 
 copy into this document.
 
-[5] Misspelled on the sample versions they distributed [6].
+[6] Misspelled on the sample versions they distributed [7].
 
-[6] Our ASA found it funny that every one of the CS faculty pointed this
+[7] Our ASA found it funny that every one of the CS faculty pointed this
 misspelling out to her.
 
-[7] Yes, I know, "Foolish consistency is the hobgoblin of small minds" or
+[8] Yes, I know, "Foolish consistency is the hobgoblin of small minds" or
 some such drivel.
 
-[8] Consistency would be nice, but not necessary.  I realize that I sometimes
+[9] Consistency would be nice, but not necessary.  I realize that I sometimes
 refer to my department as "The Department of Computer Science" and sometimes
 as "The Computer Science Department".
 
-[9] I do see one reason not to use the word "Department"---some of the
+[10] I do see one reason not to use the word "Department"---some of the
 academic entities are concentrations.
 
-[10] Grinnell College Bookstore and Pioneer Bookstore.
+[11] Grinnell College Bookstore and Pioneer Bookstore.
 
-[11] An institution that gets its own vice president.
+[12] A program that gets its own vice president.
 
-[12] That issue has now been fixed.
+[14] That issue has now been fixed.
 
-[14] That issue has also been fixed.
+[15] That issue has also been fixed.
 
-[16] That issue has not been fixed.  Maybe Communications knows something
+[17] That issue has not been fixed.  Maybe Communications knows something
 we don't, and there are institutional plans to create separate a separate
 department of Statistics.
 
-[17] That issue has also not been fixed.
+[18] That issue has also not been fixed.
 
-[18] The department of Theatre and Dance awards a bachelor's degree only
+[19] The department of Theatre and Dance awards a bachelor's degree only
 in Theatre.  There was a proposal last spring to rename the degree, but it
 is still under discussion.  Is this another case in which Communications
 knows something I don't know?  I hope not; Dance is an incredibly valuable
 part of this institution.
 
-[19] It appears that I am misguided in thinking that Communications
+[20] It appears that I am misguided in thinking that Communications
 should be willing to communicate.
 
 ---
 
-*Version 0.9 of 2017-08-09.*
+*Version 1.0 of 2017-08-09.*
