Are they really microaggressions?

--- a/unposted-2017-08-09.md
+++ b/unposted-2017-08-09.md
@@ -2,11 +2,10 @@ Another unposted rant
 =====================
 
 I wrote a longish rant about a campus issue this morning.  It felt good.
-I drew upon the wounds of repeated [microaggressions](microaggressions)
-[1] to comment vociferously on a recent slight [2].  But I tried to
-be rational.  Instead of posting it immediately [3], I decided to run
-it by a few valued colleagues to get their feedback on it.  One of them
-wrote the following [4].
+I drew upon the wounds of repeated slights [1] to comment vociferously
+on a more recent slight [2].  But I tried to be rational.  Instead of
+posting it immediately [3], I decided to run it by a few valued colleagues
+to get their feedback on it.  One of them wrote the following [4].
 
 > Sam, your rant effectively targets two staff members.  Have you put
   yourself in their place?  Here are some things you might think about
@@ -22,8 +21,8 @@ the position of the other before I rant about them [8].
 
 ---
 
-[1] The microaggressions I suffer as a computer scientist are generally
-not nearly as bad as those folks suffer for their perceived race or
+[1] The slights I suffer as a computer scientist are generally not nearly
+as bad as the microagressions folks suffer for their perceived race or
 gender or other identity.  But they do build up.
 
 [2] Well, perceived slight.
@@ -45,4 +44,4 @@ if I didn't get yet another painful data set today.
 
 ---
 
-*Version 1.0 of 2017-08-09.*
+*Version 1.1 of 2017-08-14.*
