--- a/i-win-2017-10-22.md
+++ b/i-win-2017-10-22.md
@@ -36,7 +36,7 @@ OASIR also provided me with a useful table for tenure-line faculty.
 <tr> <td>75th %ile</td> <td align="center">827</td> </tr>
 </table>
 
-Hmmm ... 1568 is higher than 1541.  SO I asked.  Under the OASIR
+Hmmm ... 1568 is higher than 1541.  So I asked.  Under the OASIR
 calculations, that 1568 does represent my SCH.  **I win!**  I think
 that also means that I taught more students than anyone else in this
 three-year period, since I teach what I think is a larger-than-normal
@@ -89,4 +89,7 @@ it's recomputed, it often uses different forms.
 
 ---
 
-*Version 1.0 of 2017-10-22.*
+*Version 1.0.1 of 2017-10-23.*
+
+*Version 1.0 released on 2017-10-22.*
+
