Lots of updates to the note to CC immediately after release.

--- a/note-to-cc-2017-11-15.md
+++ b/note-to-cc-2017-11-15.md
@@ -23,14 +23,14 @@ student needed eight courses for two majors in three semesters.  There are
 some complications that led to the situation which are inappropriate
 to discuss in a musing [5].  
 
-Next, I wondered why we allowed the student to add a concentration on
+Next, I wondered why we allowed the student to add a concentration [6] on
 top of that.
 
 Then I realized: I never approved that concentration.  So I checked
-the concentration declaration form [6].  Lo and behold, although the
+the concentration declaration form [9].  Lo and behold, although the
 concentration advisor has to sign the form, the major advisor does not
-[7].  So, even though I'd been trying to step back from worrying about
-things [8], I composed a note to Curriculum Committee.
+[10].  So, even though I'd been trying to step back from worrying about
+things [11], I composed a note to Curriculum Committee.
 
 ---
 
@@ -66,7 +66,7 @@ we treat concentrations so differently than majors in the declaration
 process.
 
 I've also realized that I should make students put their four-year 
-plan in Self Service [9] when they declare a major so that I can access
+plan in Self Service [12] when they declare a major so that I can access
 that plan at all times and see when they decide to change it.
 
 ---
@@ -84,16 +84,26 @@ be offered again.
 [5] Now that I look at it in a fresh light, I realize that they really
 only need three more courses for the CS major.
 
-[6] <https://grinco.sharepoint.com/sites/Registrar/Shared%20Documents/Concentration%20Declaration%20Coversheet.pdf>
+[6] Grinnell doesn't have minors.  Concentrations serve as our alternative
+to minors.  They tend to be in more interdisciplinary areas, like 
+Technology Studies [7], Global Development Studies, and Peace and Conflict
+Studies [8].  But we also have some in more traditional disciplines, such
+as Statistics.
 
-[7] Or the major advisors do not.
+[7] Soon to be renamed.  We don't yet know what the new name will be.
 
-[8] Please stop laughing.  I'm serious.  I really do plan to step back.  
+[8] No, not all of the concentrations end in "Studies".
+
+[9] <https://grinco.sharepoint.com/sites/Registrar/Shared%20Documents/Concentration%20Declaration%20Coversheet.pdf>
+
+[10] Or the major advisors do not.
+
+[11] Please stop laughing.  I'm serious.  I really do plan to step back.  
 I've resigned two positions, including one that required me to be at
 faculty meetings, for just that reason.
 
-[9] Our online course planning system.
+[12] Our online course planning system.
 
 ---
 
-*Version 1.0 of 2017-11-15.*
+*Version 1.1 of 2017-11-15.*
