Whoops!  Forgot most important Sunday task.

--- a/one-hour-2018-01-26.md
+++ b/one-hour-2018-01-26.md
@@ -34,6 +34,7 @@ do in that hour?  Here are some options.
 * I could catch up a bit on email; I'm about a day behind [9].
 * I could write one of the six or so outstanding recommendation letters
   I have due early next week [10].
+* I could plan my spring break college visit trip with Youngest Son.
 
 But I made that plan at about 6 a.m. this morning, a little after I got
 up.  What did my day look like after that?  Let's see ... After getting
@@ -68,7 +69,8 @@ Can I sneak in some time tomorrow?  We shall see.  Between 8:00 a.m. and
 11:00 p.m., it looks like they have one 70-minute unscheduled block.  But
 maybe I can use parts of meal time or other breaks.
 
-And there's always Sunday [12].
+And there's always Sunday [12].  First priority Sunday is Youngest Son's 
+spring break trip.
 
 ---
 
@@ -120,4 +122,4 @@ really possible, but that will just be depressing.
 
 ---
 
-*Version 1.0 of 2018-01-26.*
+*Version 1.0.1 of 2018-01-26.*
