Update to the next time logs musing.

--- a/time-logs-2018-02-19.md
+++ b/time-logs-2018-02-19.md
@@ -3,6 +3,20 @@ Logging my time (Week four of Spring Semester 2018)
 
 Continuing a pattern.
 
+If we count musings, over 42 hours in the first three days of the week
+alone.  But Thursday was better.  Only seven hours of work, including
+musing.  Why?  Eldest was back in town, and I decided I should spend
+time with him.  We also had a swim banquet for Youngest.  Friday I took
+time to see Middle dive [n] and to attend the annual Grinnell Lecture [n].
+
+[n] Also to see the other divers.  I'll miss seeing the SGA president's
+dives, the cellist's awesome support of her teammates, and the other
+senior diver with hair even wilder than Middle's.
+
+[n] There have been three Grinnell lectures so far.  Each has come at
+a point in the semester in which I could not keep my eyes open at 5:00
+p.m. on a Friday night.
+
 Two or three students who would like multiple appointments per week.
 
 ---
@@ -17,4 +31,4 @@ I replied as follows.
 
 ---
 
-*Version 0.1 of 2018-02-14.*
+*Version 0.3 of 2018-02-15.*
