--- a/csp-2017-06-16.md
+++ b/csp-2017-06-16.md
@@ -173,7 +173,7 @@ as to encourage others to use good style [17].
 ---
 
 [1] I'm pretty sure that you can find AP CS courses that use each of
-the following languages: Scratch, Alice, C, C#, Snap!, Racket, Javascript,
+the following languages: Scratch, Alice, C, C#, Snap!, Racket, JavaScript,
 Python, C, AppInventor, and StarLogo.  I know I've missed some.
 
 [2] After all, you can't expect most readers to know this wide variety of
@@ -224,4 +224,6 @@ makes me want to discount the CSP AP altogether.
 
 ---
 
-*Version 1.0 of 2017-06-16.*
+*Version 1.0 released 2017-06-16.*
+
+*Version 1.0.1 of 2018-02-25.*
