Add updates about Dari Barn.

--- a/language-2018-05-02.md
+++ b/language-2018-05-02.md
@@ -26,7 +26,7 @@ And it can happen a lot when cultures don't regularly come together.
 As far as I can tell, I may be the only person in the town of Grinnell
 that objects to the use of derogatory slang in the name the Dari Barn
 uses for the Italian sausage sandwich [5].  Most people with whom I share
-my concerns about that sandwich are not aware of the underlying insult.
+my concerns about that sandwich are not aware of the underlying insult [6,7].
 
 I must that I also unintentionally use words that are insulting or
 damaging.  For example, there have been times that I've used terms
@@ -37,14 +37,14 @@ I then try to improve.
 Recently, two Facebook discussions have gotten me to think more about the
 ways in which the context in which a word is used makes a big difference.
 In one case, I had complained about one of the College's dozens of new
-two-word taglines, "Live Vocally" [6].  I noted that the tagline seems
-ableist, emphasizing the ability to speak [7].  A colleague raised a
+two-word taglines, "Live Vocally" [7].  I noted that the tagline seems
+ableist, emphasizing the ability to speak [8].  A colleague raised a
 reasonable objection, saying, approximately, "The meaning of 'vocally'
 is clear in a sentence like, 'Sam objects vocally to the College's use of
 two-word taglines'. If that use is not objectionable, why is this one?"
 In a different discussion, someone asked why it's not okay to call
-[week 14](naming-week-14), "Hell Week" [8], particularly since we are
-comfortable saying "Wow, this was a hellish week" [9].  Admittedly,
+[week 14](naming-week-14), "Hell Week" [9], particularly since we are
+comfortable saying "Wow, this was a hellish week" [10].  Admittedly,
 the colleagues' primary concern was that we should focus more on making
 the week less difficult for the students who find it such.  Nonetheless,
 I will focus on the discussion of language.
@@ -54,7 +54,7 @@ the individual and the collective.  I am vocal about a number of issues,
 both figuratively and literally.  Calling me such acknowledges that fact.
 But making it a tagline, as in "Live Vocally", makes it an aspirational
 goal.  And, while the intent is clearly figurative rather than literal
-[10], I expect that it could be off-putting to someone who is unable to
+[11], I expect that it could be off-putting to someone who is unable to
 speak.  That is, it is ableist.  I'd like to see us choose better words.
 
 What about the other case?  "Hell Week" is not a slur at any particular
@@ -70,10 +70,10 @@ hear from many students that Grinnell has developed an unhealthy "I'm
 more stressed than you are" culture; we do not need to use terms that
 contribute to that culture.
 
-What should you take from all this [11]?  Language has power.  Context
+What should you take from all this [12]?  Language has power.  Context
 matters.  Know your audience.  But you learned all of that in Tutorial.
 So, perhaps, remember that "All I need to know, I learned in Tutorial
-[12]."
+[14]."
 
 One other thing: If you're a faculty member, work with your students to
 help make the end of the semester more manageable.
@@ -92,26 +92,30 @@ a metaphor for successful bargaining."
 
 [5] The second word is "grinder".  The first word also starts with a "g".
 
-[6] If I recall correctly, another banner appears to say "Live Locally".
+[6] My Facebook comments suggest that I'm not alone in opposing the
+name.  And I hear from at least one person that they've finally fixed
+the name.  I'll need to grab a menu to see for sure.
+
+[7] If I recall correctly, another banner appears to say "Live Locally".
 I'm not sure what that means.  Don't we want our students to go off and
 explore the world?  And would you come to Grinnell if you knew that you'd
 be stuck here?
 
-[7] There's a second issue of having enough capital to be able to speak
+[8] There's a second issue of having enough capital to be able to speak
 out, which is likely the intended meaning.
 
-[8] I apologize for the profanity.
+[9] I apologize for the profanity.
 
-[9] I've been known to say that, and I do tend to say it more frequently
+[10] I've been known to say that, and I do tend to say it more frequently
 toward the end of the semester.
 
-[10] At least I think it is.
+[11] At least I think it is.
 
-[11] When the last paragraph of a musing ends with a question, you know
+[12] When the last paragraph of a musing ends with a question, you know
 that I was struggling to [write my concluding paragraph](wrapping-up).
 
-[12] No, not really.
+[14] No, not really.
 
 ---
 
-*Version 1.0 of 2018-05-02.*
+*Version 1.1 of 2018-05-02.*
