Fix small typo.

--- a/language-2018-05-02.md
+++ b/language-2018-05-02.md
@@ -28,7 +28,7 @@ that objects to the use of derogatory slang in the name the Dari Barn
 uses for the Italian sausage sandwich [5].  Most people with whom I share
 my concerns about that sandwich are not aware of the underlying insult [6,7].
 
-I must that I also unintentionally use words that are insulting or
+I must admit that I also unintentionally use words that are insulting or
 damaging.  For example, there have been times that I've used terms
 that the Romani or residents of Wales might find harmful.  I count on
 my students, colleagues, and friends to remind me when I've done so.
@@ -118,4 +118,4 @@ that I was struggling to [write my concluding paragraph](wrapping-up).
 
 ---
 
-*Version 1.1 of 2018-05-02.*
+*Version 1.1.1 of 2018-05-02.*
