Fix bad endnote link.

--- a/language-2018-05-02.md
+++ b/language-2018-05-02.md
@@ -26,7 +26,7 @@ And it can happen a lot when cultures don't regularly come together.
 As far as I can tell, I may be the only person in the town of Grinnell
 that objects to the use of derogatory slang in the name the Dari Barn
 uses for the Italian sausage sandwich [5].  Most people with whom I share
-my concerns about that sandwich are not aware of the underlying insult [6,7].
+my concerns about that sandwich are not aware of the underlying insult [6].
 
 I must admit that I also unintentionally use words that are insulting or
 damaging.  For example, there have been times that I've used terms
@@ -118,4 +118,6 @@ that I was struggling to [write my concluding paragraph](wrapping-up).
 
 ---
 
-*Version 1.1.1 of 2018-05-02.*
+*Version 1.0 released 2018-05-02.*
+
+*Version 1.1.2 of 2018-05-03.*
