Add Steve Sieck

--- a/map-form-2018-05-08.md
+++ b/map-form-2018-05-08.md
@@ -129,8 +129,8 @@ Among other things, I was surprised to discover [a list of all the MAPs and MIPs
 Fall 2009](http://www.grinnell.edu/academics/dean/map/past_maps) [10].
 That allowed me to learn a number of things, such as that [Elaine
 Marzluff](elaine-marzluff) supervised 58 MAPs and MIPs in that time
-[11,12].  I should turn those data into a more usable form and see what
-other insights I can gather [14].
+[11,14].  I should turn those data into a more usable form and see what
+other insights I can gather [15].
 
 ---
 
@@ -164,14 +164,18 @@ volunteer positions.
 was considered public information.
 
 [11] Amazingly, that's not the highest number.  I think Mark Levandoski
-supervised 59 and Clark Lindgren supervised 60.
+supervised 59 and Clark Lindgren supervised 60 [12].
 
-[12] I'm a piker.  I only supervised 50.
+[12] A reader points out that it appears that Steven Sieck has done 74.
 
-[14] It would be nice if they entered the data more consistently.
+[14] I'm a piker.  I only supervised 50.
+
+[15] It would be nice if they entered the data more consistently.
 For example, I see Clark Lindgren listed as "Lindgren, Clark A.",
 "Clark Lindgren", and "C. Lindgren".
 
 ---
 
-*Version 1.0 of 2018-05-08.*
+*Version 1.0 released 2018-05-08.*
+
+*Version 1.1 of 2018-05-08.*
