Add links to the mating slugs page.

--- a/name-tags-2017-08-09.md
+++ b/name-tags-2017-08-09.md
@@ -185,10 +185,10 @@ is the case, Communications should have proofread.
 [1] Well, probably the Office of Communications, rather than the College
 itself.
 
-[2] There was a period in which the College used only the right
-half of the Laurel Leaf as our logo.  Students quickly decided
-that the two things looked like mating slugs.  [The Wayback machine
-copy of old College Web
+[2] There was a period in which the College used only one petal
+of the Laurel Leaf as our logo, and split that one petal in half.
+Students quickly decided that the two things looked like [mating
+slugs](mating-slugs).  [The Wayback machine copy of old College Web
 site](https://web.archive.org/web/19981202000825/http://www.grinnell.edu:80/)
 shows some examples.
 
@@ -241,4 +241,6 @@ should be willing to communicate.
 
 ---
 
-*Version 1.0 of 2017-08-09.*
+*Version 1.0 released 2017-08-09.*
+
+*Version 1.1 of 2018-05-09.*
