Fix grammatical error.

--- a/guns-2018-05-19.md
+++ b/guns-2018-05-19.md
@@ -13,7 +13,7 @@ From the left: "We need to change the second amendment."  "It's the
 NRA's fault."  But, well, it's unlikely that our country will change the
 second amendment in any significant way [1].  And, while I am happy to lay
 some blame on the NRA for school shootings that involve semi-automatic
-weapons, this shooting involved weapons that whose banning seems unlikely;
+weapons, this shooting involved weapons whose banning seems unlikely;
 shotguns and pistols are part of rural life.
 
 I don't know what the solution is.  I'm not even sure that there is a
@@ -61,4 +61,6 @@ is shifting in the opposite direction.
 
 ---
 
-*Version 1.0 of 2018-05-19.*
+*Version 1.0 released 2018-05-19.*
+
+*Version 1.0.1 of 2018-05-19.*
