--- a/vacation-2018-06-20.md
+++ b/vacation-2018-06-20.md
@@ -6,7 +6,7 @@ Back from vacation
 Some of you have been wondering where I've been.  If I recall correctly,
 my last musing was about [my allergies](nut-allergies).  I wrote that
 musing while on vacation.  Being on vacation made it harder to muse.
-It's not so much that I was on vacation, it was issues associated with
+It's not just that I was on vacation, it was also issues associated with
 being on vacation.  My days were less predictable and generally ended
 later than my normal work days [1].  My Internet connection was atrocious
 [2].  And so, after three days of trying to muse while on vacation,
@@ -18,12 +18,18 @@ after a short dinner.  Tuesday was another long day of code camp.  Tuesday
 night was spent dealing with laptop problems and email.
 
 Today marks a week since I stopped musing.  It's time to start again.
-However, tonight is game night at the Rebelsky's [5], which means that
-I won't have much time or energy to muse [6].
+However, tonight was game night at the Rebelskys' [5], which means that
+I don't have much time or energy to muse [6].
 
 So, although I'm back, you don't get a long musing. In fact, this is all
 you get.  You can cross your fingers that I'll have time and energy after
 tomorrow's ten-hour code camp day.
+
+---
+
+Postscript: I was traveling all day on my birthday and fathers' day [7],
+so it seems that this year will lack birthday and fathers' day musings.
+Perhaps they will appear next year.
 
 ---
 
@@ -46,6 +52,9 @@ Sent.
 [6] A full day of code camp plus shopping plus game night leads to a 
 very tired Sam.
 
+[7] Conveniently, they were on the same day this year.  I believe that it
+was also Bunker Hill day.
+
 ---
 
-*Version 0.9 of 2018-06-20.*
+*Version 1.0 of 2018-06-20.*
